make connection php file and bsaic index file for registration page

--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <title>Insecure Banking</title>
 </head>
 
-<body></body>
+<h1>Bank of Insecurity: User Registration</h1>
+
+<body>
 <form method="post" action="connect.php">
+User ID : <input type="text" name="username"><br><br>
+Email : <input type="email" name="email"><br><br>
+Password : <input type="password" name="password"><br><br>
+Card Number : <input type="number" name="cc_num"><br><br>
 
-
+<input type="submit" value="Submit">
 </form>
-
-
+</body>
 
 
 
