moved earlier build into folder "early build" and created new php files for config (connection) and registration as well as some html for display of registration page

--- a/early build/index.html
+++ b/early build/index.html
@@ -9,7 +9,7 @@
 <h1>Bank of Insecurity: User Registration</h1>
 
 <body>
-    <form method="post" action="connect.php">
+    <form method="post" action="config.php">
         User ID : <input type="text" name="username"><br><br>
         Email : <input type="email" name="email"><br><br>
         Password : <input type="password" name="password"><br><br>
